--- a/Ramble/TrackListItem.xib
+++ b/Ramble/TrackListItem.xib
@@ -50,7 +50,7 @@
 					<object class="IBUILabel" id="16843631">
 						<reference key="NSNextResponder" ref="1059824426"/>
 						<int key="NSvFlags">292</int>
-						<string key="NSFrame">{{71, 9}, {207, 21}}</string>
+						<string key="NSFrame">{{71, 9}, {229, 21}}</string>
 						<reference key="NSSuperview" ref="1059824426"/>
 						<reference key="NSWindow"/>
 						<reference key="NSNextKeyView" ref="516887213"/>
@@ -219,20 +219,17 @@
 				<object class="IBPartialClassDescription">
 					<string key="className">LocalTracksTableViewController</string>
 					<string key="superclassName">UITableViewController</string>
-					<dictionary class="NSMutableDictionary" key="actions">
-						<string key="doneButtonPressed:">id</string>
-						<string key="prefsButtonPressed:">id</string>
-					</dictionary>
-					<dictionary class="NSMutableDictionary" key="actionInfosByName">
-						<object class="IBActionInfo" key="doneButtonPressed:">
+					<object class="NSMutableDictionary" key="actions">
+						<string key="NS.key.0">doneButtonPressed:</string>
+						<string key="NS.object.0">id</string>
+					</object>
+					<object class="NSMutableDictionary" key="actionInfosByName">
+						<string key="NS.key.0">doneButtonPressed:</string>
+						<object class="IBActionInfo" key="NS.object.0">
 							<string key="name">doneButtonPressed:</string>
 							<string key="candidateClassName">id</string>
 						</object>
-						<object class="IBActionInfo" key="prefsButtonPressed:">
-							<string key="name">prefsButtonPressed:</string>
-							<string key="candidateClassName">id</string>
-						</object>
-					</dictionary>
+					</object>
 					<object class="NSMutableDictionary" key="outlets">
 						<string key="NS.key.0">tblCell</string>
 						<string key="NS.object.0">TrackListItem</string>
