--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -18,6 +18,10 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                             </view>
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="9jR-Rp-aU5">
+                                <rect key="frame" x="0.0" y="424" width="38" height="36"/>
+                                <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                            </imageView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="5cG-nN-6LN">
                                 <rect key="frame" x="0.0" y="410" width="50" height="50"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
@@ -52,6 +56,7 @@
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                     </view>
                     <connections>
+                        <outlet property="lastVideoThumbnail" destination="9jR-Rp-aU5" id="sjP-3m-xde"/>
                         <outlet property="subView" destination="upP-vZ-cLb" id="b7R-G6-thj"/>
                     </connections>
                 </viewController>
@@ -115,7 +120,7 @@
                                 <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                                 <color key="backgroundColor" white="1" alpha="1" colorSpace="calibratedWhite"/>
                                 <prototypes>
-                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" id="oQY-xc-nPb">
+                                    <tableViewCell contentMode="scaleToFill" selectionStyle="blue" hidesAccessoryWhenEditing="NO" indentationLevel="1" indentationWidth="0.0" reuseIdentifier="Identifier" id="oQY-xc-nPb">
                                         <rect key="frame" x="0.0" y="22" width="320" height="44"/>
                                         <autoresizingMask key="autoresizingMask"/>
                                         <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -267,7 +272,7 @@
                                 <nil key="highlightedColor"/>
                             </label>
                             <view hidden="YES" opaque="NO" alpha="0.80000000000000004" contentMode="scaleToFill" id="gFG-Sy-vKA">
-                                <rect key="frame" x="128" y="262" width="280" height="243"/>
+                                <rect key="frame" x="20" y="114" width="280" height="243"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <subviews>
                                     <label opaque="NO" clipsSubviews="YES" userInteractionEnabled="NO" contentMode="left" text="Uploading Video..." lineBreakMode="tailTruncation" minimumFontSize="10" id="086-N6-ad0">
@@ -335,6 +340,7 @@
                         <outlet property="thumbnailImage" destination="vHf-Wo-eel" id="5ci-sy-476"/>
                         <outlet property="titleLabel" destination="h4A-IS-BZ3" id="aeJ-UE-N0a"/>
                         <outlet property="titleTextField" destination="Pbc-vb-58M" id="amx-XL-ZVy"/>
+                        <outlet property="uploadButton" destination="sdK-AL-rMH" id="tvL-3c-a1r"/>
                         <outlet property="uploadProgress" destination="LkB-Br-XSq" id="KGy-Mq-CTF"/>
                         <outlet property="uploadStatusLabel" destination="Hqi-zH-Gzc" id="naB-HF-Epd"/>
                         <outlet property="uploadView" destination="gFG-Sy-vKA" id="wWe-iJ-AXg"/>
@@ -531,6 +537,7 @@
             <relationships>
                 <relationship kind="action" name="recentCaptureViewButtonPressed:"/>
                 <relationship kind="action" name="toggleViewButtonPressed:"/>
+                <relationship kind="outlet" name="lastVideoThumbnail" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="subView" candidateClass="UIView"/>
             </relationships>
         </class>
@@ -545,6 +552,7 @@
                 <relationship kind="outlet" name="thumbnailImage" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="titleLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="titleTextField" candidateClass="UITextField"/>
+                <relationship kind="outlet" name="uploadButton" candidateClass="UIButton"/>
                 <relationship kind="outlet" name="uploadProgress" candidateClass="UIProgressView"/>
                 <relationship kind="outlet" name="uploadStatusLabel" candidateClass="UILabel"/>
                 <relationship kind="outlet" name="uploadView" candidateClass="UIView"/>
