--- a/Ramble/en.lproj/MainStoryboard.storyboard
+++ b/Ramble/en.lproj/MainStoryboard.storyboard
@@ -53,7 +53,7 @@
                                     <action selector="toggleViewButtonPressed:" destination="2" eventType="touchUpInside" id="VvC-sq-9pU"/>
                                 </connections>
                             </button>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="listIcon.png" id="aez-vp-vzP">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" id="aez-vp-vzP">
                                 <rect key="frame" x="284" y="428" width="34" height="26"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -62,6 +62,7 @@
                     </view>
                     <connections>
                         <outlet property="lastVideoThumbnail" destination="9jR-Rp-aU5" id="sjP-3m-xde"/>
+                        <outlet property="rightButtonIcon" destination="aez-vp-vzP" id="CLn-lu-vOd"/>
                         <outlet property="subView" destination="upP-vZ-cLb" id="b7R-G6-thj"/>
                     </connections>
                 </viewController>
@@ -145,7 +146,7 @@
                                     <outlet property="delegate" destination="l2J-xt-vz1" id="Vv7-Qd-iL1"/>
                                 </connections>
                             </tableView>
-                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="topbar.png" id="UV9-04-dpL">
+                            <imageView userInteractionEnabled="NO" contentMode="scaleToFill" image="topBar.png" id="UV9-04-dpL">
                                 <rect key="frame" x="0.0" y="0.0" width="320" height="70"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                             </imageView>
@@ -229,7 +230,7 @@
                                     <action selector="backButtonPressed:" destination="jgy-c8-mbi" eventType="touchUpInside" id="M0r-vh-xNC"/>
                                 </connections>
                             </button>
-                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="tKi-oy-D1J" userLabel="Accessory Button">
+                            <button hidden="YES" opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" id="tKi-oy-D1J" userLabel="Accessory Button">
                                 <rect key="frame" x="20" y="17" width="35" height="35"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="boldSystem" pointSize="15"/>
@@ -567,10 +568,8 @@
         <image name="bottomrightdown.png" width="99" height="102"/>
         <image name="bottomrightup.png" width="99" height="102"/>
         <image name="gear.png" width="52" height="52"/>
-        <image name="listIcon.png" width="68" height="52"/>
         <image name="ramble.png" width="237" height="78"/>
         <image name="topBar.png" width="640" height="132"/>
-        <image name="topbar.png" width="16" height="16"/>
     </resources>
     <classes>
         <class className="CaptureViewController" superclassName="UIViewController">
@@ -630,6 +629,7 @@
                 <relationship kind="action" name="recentCaptureViewButtonPressed:"/>
                 <relationship kind="action" name="toggleViewButtonPressed:"/>
                 <relationship kind="outlet" name="lastVideoThumbnail" candidateClass="UIImageView"/>
+                <relationship kind="outlet" name="rightButtonIcon" candidateClass="UIImageView"/>
                 <relationship kind="outlet" name="subView" candidateClass="UIView"/>
             </relationships>
         </class>
